[workspace]
resolver = "2"

members = [
    "config",
    "scheduler",
    "user_test",
    "base_task",
    "vsched",
    "utils",
    "vsched_apis",
    "task_management",
    "build_test",
]

exclude = ["output/vdso_wrapper", "output/libvsched"]

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["Fangliang Zhao <1491657576@qq.com>", "rosy <lc_rosy@qq.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/rosy233333/vsched"
documentation = "https://github.com/rosy233333/vsched/blob/main/README.md"
repository = "https://github.com/rosy233333/vsched"
keywords = ["vdso", "scheduling"]
categories = ["os", "no-std"]


[workspace.dependencies]
scheduler = { version = "0.2", package = "vsched_scheduler" }
vsched = { path = "vsched" }
config = { version = "0.1", package = "vsched_config" }
user_test = { path = "user_test" }
base_task = { version = "0.1", package = "vsched_base_task" }
utils = { version = "0.1", package = "vsched_utils" }
vsched_apis = { path = "vsched_apis" }
task_management = { path = "task_management" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
