[package]
name = "base_task"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]

sched-fifo = ["scheduler/sched-fifo"]
sched-rr = ["scheduler/sched-rr"]
sched-cfs = ["scheduler/sched-cfs"]
irq = []
preempt = []
smp = []
alloc = ["scheduler/alloc", "crossbeam", "kspin", "kernel_guard"]
tls = []

[dependencies]
cfg-if = "1.0"
log = "0.4"
hal = { git = "https://github.com/rosy233333/vsched_hal.git" }
config = { workspace = true }
memory_addr = { version = "0.4" }
scheduler = { workspace = true }
crossbeam = { version = "0.8", default-features = false, optional = true }


kspin = { version = "0.1", optional = true }
kernel_guard = { version = "0.1", optional = true }
