[package]
name = "build_test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
build_vdso = { path = "../../vdso_crate_template/build_vdso" }