[package]
name = "vsched_scheduler"
version = "0.2.1"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Various scheduler algorithms in a unified interface"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../README.md"

[features]
alloc = []
sched-fifo = []
sched-rr = []
sched-cfs = []


[dependencies]
cfg-if = "1.0"
utils = { workspace = true }
config = { workspace = true }
heapless = { version = "0.8", features = ["mpmc_large"] }
crossbeam = { version = "0.8", default-features = false }
