[package]
name = "task_management"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
sched-fifo = ["scheduler/sched-fifo"]
sched-rr = ["scheduler/sched-rr"]
sched-cfs = ["scheduler/sched-cfs"]

irq = ["base_task/irq"]
preempt = ["base_task/preempt"]
smp = ["base_task/smp"]
tls = ["base_task/tls"]

[dependencies]
base_task = { workspace = true }
scheduler = { workspace = true }
crossbeam = { version = "0.8", default-features = false }
# TODO: 移除对config的依赖，将配置项放入interface中。
config = { workspace = true }
log = "0.4"
kspin = "0.1"
vsched_apis = { workspace = true }
crate_interface = "0.1"
cpumask = "0.1"
