[package]
name = "user_test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
preempt = []
irq = []

[dependencies]
log = "0.4"
env_logger = "0.9"
libvsched = { path = "../output/libvsched" }
config = { workspace = true }
base_task = { workspace = true }
utils = { workspace = true }
task_management = { workspace = true }
memmap2 = "0.9.5"
elf_parser = { git = "https://github.com/rosy233333/elf_parser.git" }
xmas-elf = "0.9.0"
page_table_entry = "0.5.7"
libc = "0.2"
include_bytes_aligned = "0.1.4"
crate_interface = "0.1"

[build-dependencies]
build_vdso = { git = "https://github.com/rosy233333/vdso_crate_template.git" }
