[package]
name = "vsched_utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "vsched的依赖库，提供了无锁的btreemap和deque"
readme = "../README.md"

[dependencies]
