[package]
name = "vsched"
version.workspace = true
edition.workspace = true
authors = ["Fangliang Zhao <1491657576@qq.com>"]
description = "Shared Scheduler via vDSO"
license.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib"]

[features]

sched-fifo = ["base_task/sched-fifo"]
sched-rr = ["base_task/sched-rr"]
sched-cfs = ["base_task/sched-cfs"]

[dependencies]
hal = { git = "https://github.com/rosy233333/vsched_hal.git" }
config = { workspace = true }
base_task = { workspace = true }
