[package]
name = "vsched"
version.workspace = true
edition.workspace = true
authors = ["Fangliang Zhao <1491657576@qq.com>"]
description = "Shared Scheduler via vDSO"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme = "../README.md"

[features]

sched-fifo = ["base_task/sched-fifo"]
sched-rr = ["base_task/sched-rr"]
sched-cfs = ["base_task/sched-cfs"]

[dependencies]
hal = { version = "0.1", package = "vsched_hal" }
config = { workspace = true }
base_task = { workspace = true }
vdso_helper = "0.1"
